1. made header to nav, added logo 2. revise about me content 3. fix contact form spacing after label

--- a/css/01_joseph_gapuz_portfolio_styled/styles.css
+++ b/css/01_joseph_gapuz_portfolio_styled/styles.css
@@ -23,14 +23,14 @@ h1, h2 {
 /* 1st container: header */
 .header-container {
     background-color: #1B253A;
-    padding: 30px;
-    margin: 30px auto 0 auto;
-    width: 70%;
-    max-width: 1200px;
-    border-radius: 10px;
+    padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.header-logo h1 {
+    font-weight: 800;
 }
 
 nav, .icons {
@@ -64,9 +64,8 @@ a:hover {
 
 /* subheader and description */
 .about-details {
-    margin-left: 20px;
+    margin-left: 40px;
     line-height: 1.5;
-    text-align: justify;
 }
 
 /* image sizing */
@@ -76,6 +75,20 @@ a:hover {
     height: auto; /* keeps the original aspect ratio */
     max-height: 260px;
     border-radius: 10px;
+}
+
+.name {
+    color: #49a18b;
+}
+
+.name-new-line {
+    display: block; 
+}
+
+.description {
+    text-align: justify;
+    line-height: 1.8;
+    margin-bottom: 0;
 }
 
 /* 3rd container: projects */
@@ -99,7 +112,7 @@ table {
 
 /* header cell font color and bg color */
 th {
-    color: #b9c1d1;
+    color: #49a18b;
     background-color: #131828;
 }
 
@@ -158,7 +171,7 @@ border-bottom-right-radius: 10px;
 
 /* labels */
 .all-label {
-    margin-bottom: 5px;
+    margin-bottom: 8px;
     color: #b9c1d1;
 }
 
